--- a/index.html
+++ b/index.html
@@ -24,23 +24,11 @@
           <div class="card shadow-2-strong" style="border-radius: 1rem;">
             <div class="card-body p-5 text-center">
               <h3 class="mb-5">Get Started</h3>
-              <p style="margin-bottom: 50px; color: #424855;">Don't have account ? Sign up</p>
-              <div class="form-outline mb-4">
-                <label class="form-label" for="typeEmailX-2">Name</label>
-                <input type="text" id="textNameX-2" class="form-control form-control-lg" />
-              </div>
-              <div class="form-outline mb-4">
-                <label class="form-label" for="typeEmailX-2">Email</label>
-                <input type="email" id="typeEmailX-2" class="form-control form-control-lg" />
-              </div>
-              <div class="form-outline mb-4">
-                <label class="form-label" for="typePasswordX-2">Password</label>
-                <input type="password" id="typePasswordX-2" class="form-control form-control-lg" />
-              </div>
+              <p style="margin-bottom: 50px; color: #424855;">Sign In With Google Account</p>
               <div class="row justify-content-center">
                 <div class="col-4">
                   <button class="btn btn-primary btn-lg btn-block"
-                    style="background-color: #5b5f68; border: none; font-size: 15px;" type="submit">Sign Up</button>
+                    style="background-color: #5b5f68; border: none; font-size: 15px;" type="submit">Cancel</button>
                 </div>
                 <div class="col-4">
                   <div class="g-signin2" data-onsuccess="onSignIn"></div>
