--- a/addData.html
+++ b/addData.html
@@ -23,27 +23,33 @@
 <body>
   <section>
     <div class="container">
-      <h4 style="margin-top: 50px;"> Add Data</h4>
+      <h4 style="margin-top: 50px;"> Tambah Data</h4>
       <form>
+
         <div class="row">
-          <div class="form-group my-3">
-            <label for="idsparepart" class="form-label">Id Sparepart</label>
-            <input type="text" class="form-control" id="idsparepart" placeholder="idsparepart">
-          </div>
-          <div class="form-group my-3">
-            <label for="namasparepart" class="form-label">Nama Sparepart</label>
-            <input type="text" class="form-control" id="namasparepart" placeholder="namasparepart">
-          </div>
-          <div class="form-group my-3">
-            <label for="harga" class="form-label">Harga</label>
-            <input type="text" class="form-control" id="harga" placeholder="harga">
-          </div>
-          <div class="form-group my-3">
-            <label for="jenis" class="form-label">Jenis</label>
-            <input type="text" class="form-control" id="jenis" placeholder="jenis">
-          </div>
-          <button type="button" class="btn btn-success ms-2 mt-4" style="background-color: #66CDAA; border:none;"
-            onclick="save();">Save</button>
+          <center>
+            <div class="form-group my-3">
+              <label for="idsparepart" class="form-label">Id Sparepart</label>
+              <input type="text" class="form-control" id="idsparepart" placeholder="idsparepart">
+            </div>
+            <div class="form-group my-3">
+              <label for="namasparepart" class="form-label">Nama Sparepart</label>
+              <input type="text" class="form-control" id="namasparepart" placeholder="namasparepart">
+            </div>
+            <div class="form-group my-3">
+              <label for="harga" class="form-label">Harga</label>
+              <input type="text" class="form-control" id="harga" placeholder="harga">
+            </div>
+            <div class="form-group my-3">
+              <label for="jenis" class="form-label">Jenis</label>
+              <input type="text" class="form-control" id="jenis" placeholder="jenis">
+            </div>
+          </center>
+          <button type="button" class="btn btn-success ms-2 mt-4"
+            style="background-color: #66CDAA; border:none; width: 20%;" onclick="save();">Save</button>
+          <button type="button" class="btn btn-success ms-2 mt-4"
+            style="background-color: #c73636; border:none; width: 20%;"
+            onclick=window.location.href="viewdata.html">Cancel</button>
         </div>
       </form>
     </div>
