--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <div class="row justify-content-center">
                 <div class="col-4">
                   <button class="btn btn-primary btn-lg btn-block"
-                    style="background-color: #5b5f68; border: none; font-size: 15px;" type="submit">Cancel</button>
+                    style="background-color: #b32e2e; border: none; font-size: 15px;" type="submit">Cancel</button>
                 </div>
                 <div class="col-4">
                   <div class="g-signin2" data-onsuccess="onSignIn"></div>
