--- a/updateData.html
+++ b/updateData.html
@@ -42,8 +42,11 @@
             <label for="jenis" class="form-label">Jenis</label>
             <input type="text" class="form-control" id="jenis" placeholder="jenis">
           </div>
-          <button type="button" class="btn btn-success ms-2 mt-4" style="background-color: #66CDAA; border:none;"
-            onclick="save();">Save</button>
+          <button type="button" class="btn btn-success ms-2 mt-4"
+            style="background-color: #66CDAA; border:none; width: 20%;" onclick="save();">Save</button>
+          <button type="button" class="btn btn-success ms-2 mt-4"
+            style="background-color: #c73636; border:none;width: 20%;"
+            onclick=window.location.href="viewdata.html">Cancel</button>
         </div>
       </form>
     </div>
