--- a/viewdata.html
+++ b/viewdata.html
@@ -18,8 +18,9 @@
       <h1 style="margin-top: 50px;">Data List Sparepart</h1>
       <a class="btn btn-success ms-2 mt-5"
         style="background-color: #66CDAA; border:none; margin-bottom: 30px;font-family: Manga pro ;"
-        href="addData.html">Add
-        Data</a>
+        href="addData.html">Tambah Data Sparepart</a>
+      <input class="form-control" id="myInput" type="text" placeholder="Cari Data..." style="width: 30%;">
+      <div class="p-2 bd-highlight"></div>
       <table id="dataTable" class="table table-bordered table-hover">
         <thead>
           <th>Id Sparepart</th>
